--- a/.vscode/some.ipynb
+++ b/.vscode/some.ipynb
@@ -97,6 +97,70 @@
     "\n",
     "None"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 5, 6, 6]\n",
+      "[3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = []\n",
+    "b = []\n",
+    "\n",
+    "def consider(i, j, k, l) -> bool:\n",
+    "    if i * j * k * l != 360:\n",
+    "        return False\n",
+    "\n",
+    "    code = 0\n",
+    "    for n in [i, j, k, l]:\n",
+    "        code |= 1 << (n - 1)\n",
+    "\n",
+    "    if code in a:\n",
+    "        return False\n",
+    "\n",
+    "    a.append(code)\n",
+    "    b.append([i, j, k, l])\n",
+    "\n",
+    "\n",
+    "for i in range(1, 7):\n",
+    "    for j in range(1, 7):\n",
+    "        for k in range(1, 7):\n",
+    "            for l in range(1, 7):\n",
+    "                consider(i, j, k, l)\n",
+    "\n",
+    "for x in b:\n",
+    "    print(x)\n",
+    "    # pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "216/6/6/6"
+   ]
   }
  ],
  "metadata": {
